--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <permission android:name="com.example.den.bigdig.LINKS_PROVIDER_PERMISSION" android:protectionLevel="normal" />
+
+    <permission
+        android:name="com.example.den.bigdig.LINKS_PROVIDER_PERMISSION"
+        android:protectionLevel="normal" />
 
     <application
         android:allowBackup="true"
@@ -22,9 +25,9 @@
         </activity>
 
         <provider
-            android:authorities="com.example.den.bigdig.Links"
             android:name="com.example.den.bigdig.LinksProvider"
-            android:exported="true"/>
+            android:authorities="com.example.den.bigdig.Links"
+            android:exported="true" />
     </application>
 
 </manifest>
